Add Apertus experience, minor edits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/linkedin.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
-    <a href='https://www.linkedin.com/in/alexander-padula-8a0a3b138/' target='_blank'>alexander-padula-8a0a3b138</a>
+    <a href='https://www.linkedin.com/in/alex-padula/' target='_blank'>alex-padula</a>
 </div>
 <div style="display: inline-flex; align-items: center; text-decoration: none;">
     <img src="/icons/passport.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
@@ -63,7 +63,14 @@
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         Python
     </div>
-    <div>(PyTorch, JAX, TRL, NumPy)</div>
+    <div>(PyTorch, JAX, VERL, TensorFlow)</div>
+</div>
+<div class="horizontal">
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        HPC
+    </div>
+    <div>(SLURM, Grace-Hopper chips)</div>
 </div>
 <div class="horizontal">
     <div>
@@ -75,13 +82,6 @@
 <div class="horizontal">
     <div>
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        Java
-    </div>
-    <div>(Reflection API)</div>
-</div>
-<div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
         C
     </div>
     <div>(CUDA)</div>
@@ -89,16 +89,9 @@
 <div class="horizontal">
     <div>
         <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        C#
+        Java, C#
     </div>
-    <div>(Unity)</div>
-</div>
-<div class="horizontal">
-    <div>
-        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
-        HPC
-    </div>
-    <div>(SLURM, ALPS cluster)</div>
+    <div></div>
 </div>
         </div>
     </div>
@@ -167,15 +160,15 @@
             <div class="vertical medium_margin">
     <div class="horizontal">
         <span>
-            <span class="title">IBM</span>
-            <span>- Semester Project - Machine Learning</span>
+            <span class="title">Apertus AI</span>
+            <span>- Research Assistant - Machine Learning</span>
         </span>
         <div>
             <span style="margin-right: 10px">Zurich, CH</span>
-            <span>Sep 2025 - current</span>
+            <span>Oct 2026 - current</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Currently developing a post-training method to make LLMs more robust to the noise introduced by analog computations. This is a critical step toward commercializing IBM's <a href='https://research.ibm.com/projects/in-memory-computing' target='_blank'>in-memory-compute</a> devices.</div>
+    <div class="small_margin" style="text-align: justify"><mark class='marker6 underline'>Working on post-training for <a href='https://www.swiss-ai.org/apertus' target='_blank'>Apertus</a>, a fully open-source 70B LLM</mark>. Contributing to RLVR training pipeline for code generation using GRPO and real-time unit test evaluations. Improved sandbox stability and reduced training time 6x.</div>
 <!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -189,7 +182,7 @@
             <span>July 2024 - Sep 2024</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. <mark class='marker6 underline'>Presented research to 60+ employees</mark>, gaining traction across departments with the potential to impact the next product cycle. Learned to share complex ideas concisely.</div>
+    <div class="small_margin" style="text-align: justify">Authored an internal paper on code generation with LLMs. <mark class='marker7 underline'>Presented research to 60+ employees</mark>, gaining traction across departments with the potential to impact the next product cycle. Learned to share complex ideas concisely.</div>
 <!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -203,7 +196,7 @@
             <span>Sep 2022 - Sep 2023</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker7 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
+    <div class="small_margin" style="text-align: justify">Developed a coding assistant for the Ludii DSL. Trained a LLM and <mark class='marker8 underline'>overcame data scarcity using grammar constrained decoding</mark>; had to develop a parser for incomplete code that could mask illegal tokens during inference.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -245,7 +238,7 @@
             <span>Nov 2018 - Aug 2019</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify"><mark class='marker8 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+    <div class="small_margin" style="text-align: justify"><mark class='marker9 underline'>Built and deployed a content-based image search engine.</mark> Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -262,25 +255,31 @@
     <div class="small_margin" style="text-align: justify">Worked in the dev team of a mobile digital payment application. Debugged Node.js API and built a prototype in React. Operated in a large codebase and loved working in a team. Received an offer to return and a recommendation letter.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
-<div class="vertical medium_margin">
-    <div class="horizontal">
-        <span>
-            <span class="title">Vivid Vision</span>
-            <span>- Internship - Virtual Reality</span>
-        </span>
-        <div>
-            <span style="margin-right: 10px">San Francisco, USA</span>
-            <span>July 2018 - Aug 2018</span>
-        </div>
-    </div>
-    <div class="small_margin" style="text-align: justify">Debugged vision testing software and developed therapeutic VR game in Unity C# for amblyopia patients.</div>
-<!--    <div class="small_margin collapsable">$$extended$$</div>-->
-</div>
         </div>
         <div class="print-pagebreak"></div>
         <div class="large_margin">
             <h2>PROJECTS</h2>
             <div class="vertical medium_margin">
+    <div class="horizontal">
+        <div class="title">IBM Research: Machine Learning on Analog Devices</div>
+        <div>
+            <span style="margin-right: 10px">Zurich, CH</span>
+            <span>Feb 2026 - Jun 2026</span>
+        </div>
+    </div>
+    <div class="small_margin" style="text-align: justify">Starting next semester, I will be developing a post-training method to make LLMs more robust to the noise introduced by analog computations. This is a critical step toward commercializing IBM's <a href='https://research.ibm.com/projects/in-memory-computing' target='_blank'>in-memory-compute</a> devices.</div>
+</div>
+<div class="vertical medium_margin">
+    <div class="horizontal">
+        <div class="title">Muon Optimizer Investigation (potential publication)</div>
+        <div>
+            <span style="margin-right: 10px">Zurich, CH</span>
+            <span>Oct 2025 - current</span>
+        </div>
+    </div>
+    <div class="small_margin" style="text-align: justify"><mark class='marker10 underline'>Exploring <a href='https://kellerjordan.github.io/posts/muon/' target='_blank'>Muon</a> optimizer's implicit bias toward sharpness minimization</mark>, wider minima, and improved generalization.</div>
+</div>
+<div class="vertical medium_margin">
     <div class="horizontal">
         <div class="title">Reinforcement Learning Agent for Diplomacy-style game</div>
         <div>
@@ -308,7 +307,7 @@
             <span>Jan 2020 - Jan 2021</span>
         </div>
     </div>
-    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker9 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
+    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has <mark class='marker11 underline'>garnered over <a href='https://somsubhra.github.io/github-release-stats/?username=JTechPhotonics&repository=J-Tech-Photonics-Laser-Tool' target='_blank'>20,000 downloads</a> and a community that helps maintain it.</mark></div>
 </div>
         </div>
         <div class="horizontal large_margin" style="justify-content: left; align-items: end">
